--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">nWoDCombat</string>
     <string name="action_settings">Settings</string>
+    <string name="rules_template_two">%s, %s</string>
 </resources>
