--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,19 @@
     <string name="app_name">nWoDCombat</string>
     <string name="action_settings">Settings</string>
     <string name="rules_template_two" formatted="false">%s, %s</string>
-    <string name="fragment_defender">FRAGMENT_DEFENDER</string>
-    <string name="fragment_attacker">FRAGMENT_ATTACKER</string>
+    <string name="fragment_defender">defender</string>
+    <string name="fragment_attacker">attacker</string>
 
     <string name="rule_reroll_none">No rerolls allowed</string>
     <string name="button_ok">OK</string>
+    <string name="button_minus">-</string>
+    <string name="button_plus">+</string>
+    <string name="nbpk_title_attribute">Attribute</string>
+    <string name="nbpk_title_skill">Skill</string>
+    <string name="nbpk_title_equipment">Equipment</string>
+    <string name="nbpk_title_potency">Potency</string>
+    <string name="card_pick_dice_notice">Tap here to pick dice for %s</string>
+
+    <string name="nbpk_widget_tag_increase">Increase</string>
+    <string name="nbpk_widget_tag_decrease">Decrease</string>
 </resources>
