--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="attr_pre">Presence</string>
     <string name="attr_man">Manipulation</string>
     <string name="attr_com">Composure</string>
+    <string name="set">Set</string>
 </resources>
