--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,14 @@
 <resources>
     <string name="app_name">nWoDCombat</string>
     <string name="action_settings">Settings</string>
-    <string name="rules_template_two" formatted="false">%s, %s</string>
     <string name="fragment_defender">defender</string>
     <string name="fragment_attacker">attacker</string>
 
-    <string name="rule_reroll_eight">8-again</string>
-    <string name="rule_reroll_nine">9-again</string>
     <string name="rule_reroll_ten">10-again</string>
-    <string name="rule_reroll_none">No rerolls allowed</string>
     <string name="button_ok">OK</string>
     <string name="button_minus">-</string>
     <string name="button_plus">+</string>
     <string name="nbpk_title_attribute">Attribute</string>
-    <string name="nbpk_title_skill">Skill</string>
-    <string name="nbpk_title_equipment">Equipment</string>
-    <string name="nbpk_title_potency">Potency</string>
-    <string name="card_pick_dice_notice">Tap here to pick dice for %s</string>
-
-    <string name="nbpk_widget_tag_increase">Increase</string>
-    <string name="nbpk_widget_tag_decrease">Decrease</string>
 
     <string name="dialog_attacker_pool">Attacker\'s dice pool is %s.</string>
     <string name="dialog_attacker_pool_rerolls" formatted="false">Attacker\'s dice pool is %s, rerolling all %ss or better.</string>
@@ -30,14 +19,12 @@
 
     <!-- Error messages -->
     <string name="error_message_context_null" translatable="false">Context is null!</string>
-    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="categorize_mental_attributes">Categorize mental attributes</string>
-    <string name="categorize_physical_attributes">Categorize physical attributes</string>
-    <string name="categorize_social_attributes">Categorize social attributes</string>
 
+    <string name="title_cat_attrs_set">Set attribute categories</string>
+    <string name="title_cat_skills_set">Set skill categories</string>
     <string name="cat_mental">Mental</string>
     <string name="attr_int">Intelligence</string>
     <string name="attr_wits">Wits</string>
@@ -53,6 +40,6 @@
     <string name="attr_man">Manipulation</string>
     <string name="attr_com">Composure</string>
     <string name="set">Set</string>
-    <string name="warning_duplicate_categories">You have duplicate categories!</string>
-    <string name="warning_leftover_points">You have leftover points!</string>
+    <string name="button_previous">Previous</string>
+    <string name="button_next">Next</string>
 </resources>
