Added mental skills setting step and layouts for all skill setting steps.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,10 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="set">Set</string>
+    <string name="button_previous">Previous</string>
+    <string name="button_next">Next</string>
+
     <string name="title_cat_attrs_set">Set attribute categories</string>
     <string name="title_cat_skills_set">Set skill categories</string>
     <string name="cat_mental">Mental</string>
@@ -39,7 +43,34 @@
     <string name="attr_pre">Presence</string>
     <string name="attr_man">Manipulation</string>
     <string name="attr_com">Composure</string>
-    <string name="set">Set</string>
-    <string name="button_previous">Previous</string>
-    <string name="button_next">Next</string>
+
+    <!--Mental skills-->
+    <string name="skill_academics">Academics</string>
+    <string name="skill_computer">Computer</string>
+    <string name="skill_crafts">Crafts</string>
+    <string name="skill_investigation">Investigation</string>
+    <string name="skill_medicine">Medicine</string>
+    <string name="skill_occult">Occult</string>
+    <string name="skill_politics">Politics</string>
+    <string name="skill_science">Science</string>
+
+    <!--Physical skills-->
+    <string name="skill_athletics">Athletics</string>
+    <string name="skill_brawl">Brawl</string>
+    <string name="skill_drive">Drive</string>
+    <string name="skill_firearms">Firearms</string>
+    <string name="skill_larceny">Larceny</string>
+    <string name="skill_stealth">Stealth</string>
+    <string name="skill_survival">Survival</string>
+    <string name="skill_weaponry">Weaponry</string>
+
+    <!--Social skills-->
+    <string name="skill_animal_ken">Animal Ken</string>
+    <string name="skill_empathy">Empathy</string>
+    <string name="skill_expression">Expression</string>
+    <string name="skill_intimidation">Intimidation</string>
+    <string name="skill_persuasion">Persuasion</string>
+    <string name="skill_socialize">Socialize</string>
+    <string name="skill_streetwise">Streetwise</string>
+    <string name="skill_subterfuge">Subterfuge</string>
 </resources>
