--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
     <string name="setting_cheat">Add points freely</string>
     <string name="setting_char_creator">Character creator</string>
     <string name="setting_ignore_caps">Ignore stat caps</string>
+    <string name="button_finish">Finish</string>
 
 </resources>
