Added title to Settings fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,14 +25,18 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="set">Set</string>
-    <string name="button_previous">Previous</string>
+    <string name="button_finish">Finish</string>
     <string name="button_next">Next</string>
+    <string name="button_previous">Previous</string>
+    <string name="button_set">Set</string>
 
+    <!-- Fragment titles -->
     <string name="title_cat_attrs_set">Set attribute categories</string>
     <string name="title_cat_skills_set">Set skill categories</string>
     <string name="title_points_set">Distribute points</string>
+    <string name="title_settings">Settings</string>
     <string name="title_summary">Summary</string>
+
     <string name="cat_mental">Mental</string>
     <string name="attr_int">Intelligence</string>
     <string name="attr_wits">Wits</string>
@@ -84,6 +88,5 @@
     <string name="setting_cheat">Add points freely</string>
     <string name="setting_char_creator">Character creator</string>
     <string name="setting_ignore_caps">Ignore stat caps</string>
-    <string name="button_finish">Finish</string>
 
 </resources>
