--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">nWoDCombat</string>
+    <string name="action_delete">Delete</string>
     <string name="action_settings">Settings</string>
     <string name="fragment_defender">defender</string>
     <string name="fragment_attacker">attacker</string>
@@ -273,4 +274,6 @@
     <string name="no_characters">No Characters</string>
 
     <string name="label_experience">Experience</string>
+
+    <string name="alert_character_delete">Are you sure you want to delete this character?</string>
 </resources>
