--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -281,4 +281,13 @@
     <string name="label_experience">Experience</string>
 
     <string name="alert_character_delete">Are you sure you want to delete this character?</string>
+
+    <!-- -->
+    <string name="attribute_mental">Mental attribute</string>
+    <string name="attribute_physical">Physical attribute</string>
+    <string name="attribute_social">Social attribute</string>
+
+    <string name="skill_mental">Mental skill</string>
+    <string name="skill_physical">Physical skill</string>
+    <string name="skill_social">Social skill</string>
 </resources>
