Added empty list message to character viewer.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -276,7 +276,7 @@
     <string name="personality_regain_one_visionary">Help someone by sharing your vision with them.</string>
     <string name="personality_regain_all_visionary">Put yourself at risk to show a group the power of your vision.</string>
     <string name="alert_title">Alert</string>
-    <string name="no_characters">No Characters</string>
+    <string name="no_characters">No characters have been yet created.\nUse the character creator wizard to build one.</string>
 
     <string name="label_experience">Experience</string>
 
