Added specialties info line on summary view. Next: fix broken saving logic.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,8 @@
     <string name="cat_secondary_suffix">Secondary</string>
     <string name="cat_tertiary_suffix">Tertiary</string>
 
+    <string name="cat_specialties">Specialties</string>
+
     <!--Mental skills-->
     <string name="skill_academics">Academics</string>
     <string name="skill_computer">Computer</string>
