--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,17 +44,25 @@
     <string name="title_settings">Settings</string>
     <string name="title_summary">Summary</string>
 
+    <string name="kind_attr">Attribute</string>
+    <string name="kind_skill">Skill</string>
+    <string name="kind_advantage">Advantage</string>
+    <string name="cat_derived">Other</string>
     <string name="cat_mental">Mental</string>
+    <string name="cat_physical">Physical</string>
+    <string name="cat_social">Social</string>
+    <string name="cat_power">Power</string>
+    <string name="cat_finesse">Finesse</string>
+    <string name="cat_resistance">Resistance</string>
+
     <string name="attr_int">Intelligence</string>
     <string name="attr_wits">Wits</string>
     <string name="attr_res">Resolve</string>
 
-    <string name="cat_physical">Physical</string>
     <string name="attr_str">Strength</string>
     <string name="attr_dex">Dexterity</string>
     <string name="attr_sta">Stamina</string>
 
-    <string name="cat_social">Social</string>
     <string name="attr_pre">Presence</string>
     <string name="attr_man">Manipulation</string>
     <string name="attr_com">Composure</string>
@@ -96,7 +104,6 @@
     <string name="skill_subterfuge">Subterfuge</string>
 
     <!--Other/derived traits-->
-    <string name="cat_derived">Other</string>
     <string name="trait_defense">Defense</string>
     <string name="trait_health">Health</string>
     <string name="trait_initiative">Initiative</string>
